5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1800_2572.log
== TEST (2019-06-12 19:17:30) 
-- CODE:
#matricula par grupo 1
#matricula impar grupo 2
x = array(eval(input("digite a matrícula do aluno: ")))
a = 0
for i in range(size(x)):
	if (x[i]%2!=0):
		a = a + 1
grupo2 = zeros(a, dtype = int)
for j in range(size(x)):
	if(x[j]%2!=0):
		grupo2[j] = x[j]

print(grupo2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:17:43) 
-- CODE:
#matricula par grupo 1
#matricula impar grupo 2
from numpy import*
x = array(eval(input("digite a matrícula do aluno: ")))
a = 0
for i in range(size(x)):
	if (x[i]%2!=0):
		a = a + 1
grupo2 = zeros(a, dtype = int)
for j in range(size(x)):
	if(x[j]%2!=0):
		grupo2[j] = x[j]

print(grupo2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:17:51) 
-- CODE:
#matricula par grupo 1
#matricula impar grupo 2
from numpy import*
x = array(eval(input("digite a matricula do aluno: ")))
a = 0
for i in range(size(x)):
	if (x[i]%2!=0):
		a = a + 1
grupo2 = zeros(a, dtype = int)
for j in range(size(x)):
	if(x[j]%2!=0):
		grupo2[j] = x[j]

print(grupo2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:18:18) 
-- CODE:
#matricula par grupo 1
#matricula impar grupo 2
from numpy import*
x = array(eval(input("digite a matricula do aluno: ")))
a = 0
for i in range(size(x)):
	if (x[i]%2!=0):
		a = a + 1
grupo2 = zeros(a, dtype = int)
for j in range(size(x)):
	if(x[j]%2!=0):
		grupo2[j] = x[j]

print(grupo2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:21:36) 
-- CODE:
#matricula par grupo 1
#matricula impar grupo 2
from numpy import*
x = array(eval(input("digite a matricula do aluno: ")))
a = 0
for i in range(size(x)):
	if (x[i]%2!=0):
		a = a + 1
grupo2 = zeros(a, dtype = int)
for j in range(size(x)):
	if(x[j]%2!=0):
		grupo2[j] = x[j]
21100406,21100408,21100401,21100412,21100407,2110040421100406,21100408,21100401,21100412,21100407,2110040421100406,21100408,21100401,21100412,21100407,21100404
print(grupo2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:23:05) 
-- CODE:
#matricula par grupo 1
#matricula impar grupo 2
from numpy import*
x = array(eval(input("digite a matricula do aluno: ")))
a = 0
for i in range(size(x)):
	if (x[i]%2!=0):
		a = a + 1
grupo2 = zeros(a, dtype = int)
for j in v:
	if(x[j]%2!=0):
		grupo2[j] = x[j]
print(grupo2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:23:19) 
-- CODE:
#matricula par grupo 1
#matricula impar grupo 2
from numpy import*
x = array(eval(input("digite a matricula do aluno: ")))
a = 0
for i in range(size(x)):
	if (x[i]%2!=0):
		a = a + 1
grupo2 = zeros(a, dtype = int)
for j in x:
	if(x[j]%2!=0):
		grupo2[j] = x[j]
print(grupo2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:23:46) 
-- CODE:
#matricula par grupo 1
#matricula impar grupo 2
from numpy import*
x = array(eval(input("digite a matricula do aluno: ")))
a = 0
for i in range(size(x)):
	if (x[i]%2!=0):
		a = a + 1
grupo2 = zeros(a, dtype = int)
for j in x:
	if(x[j]%2!=0):
		grupo2[j] = x[j]
print(grupo2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:24:04) 
-- CODE:
#matricula par grupo 1
#matricula impar grupo 2
from numpy import*
x = array(eval(input("digite a matricula do aluno: ")))
a = 0
for i in range(size(x)):
	if (x[i]%2!=0):
		a = a + 1
grupo2 = zeros(a, dtype = int)
for j in x:
	if(x[j]%2!=0):
		grupo2[j] = x[j]
print(grupo2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:25:40) 
-- CODE:
#matricula par grupo 1
#matricula impar grupo 2
from numpy import*
x = array(eval(input("digite a matricula do aluno: ")))
a = 0
for i in x:
	if (x % 2 != 0):
		a = a + 1
grupo2 = zeros(a, dtype = int)
for j in x:
	if(x % 2 != 0):
		grupo2[j] = x[j]
print(grupo2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:27:52) 
-- CODE:
#matricula par grupo 1
#matricula impar grupo 2
from numpy import*
x = array(eval(input("digite a matricula do aluno: ")))
a = 0
for i in range(size(x)):
	if (x[i] % 2 != 0):
		a = a + 1
grupo2 = zeros(a, dtype = int)
y = 0
for j in range(size(x)):
	if(x[j] % 2 != 0):
		grupo2[y] = x[y]
		y = y + 1
print(grupo2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:28:12) 
-- CODE:
#matricula par grupo 1
#matricula impar grupo 2
from numpy import*
x = array(eval(input("digite a matricula do aluno: ")))
a = 0
for i in range(size(x)):
	if (x[i] % 2 != 0):
		a = a + 1
grupo2 = zeros(a, dtype = int)
y = 0
for j in range(size(x)):
	if(x[j] % 2 != 0):
		grupo2[y] = x[y]
		y = y + 1
print(grupo2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:28:24) 
-- CODE:
#matricula par grupo 1
#matricula impar grupo 2
from numpy import*
x = array(eval(input("digite a matricula do aluno: ")))
a = 0
for i in range(size(x)):
	if (x[i] % 2 != 0):
		a = a + 1
grupo2 = zeros(a, dtype = int)
y = 0
for j in range(size(x)):
	if(x[j] % 2 != 0):
		grupo2[y] = x[y]
		y = y + 1
print(grupo2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:29:14) 
-- CODE:
#matricula par grupo 1
#matricula impar grupo 2
from numpy import*
x = array(eval(input("digite a matricula do aluno: ")))
a = 0
for i in range(size(x)):
	if (x[i] % 2 != 0):
		a = a + 1
grupo2 = zeros(a, dtype = int)
y = 0
j = 0
for j in range(size(x)):
	if(x[j] % 2 != 0):
		grupo2[y] = x[y]
		y = y + 1
	j = j + 1
print(grupo2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:29:27) 
-- CODE:
#matricula par grupo 1
#matricula impar grupo 2
from numpy import*
x = array(eval(input("digite a matricula do aluno: ")))
a = 0
for i in range(size(x)):
	if (x[i] % 2 != 0):
		a = a + 1
grupo2 = zeros(a, dtype = int)
y = 0
j = 0
for j in range(size(x)):
	if(x[j] % 2 != 0):
		grupo2[y] = x[y]
		y = y + 1
	j = j + 1
print(grupo2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:32:31) 
-- CODE:
#matricula par grupo 1
#matricula impar grupo 2
from numpy import*
x = array(eval(input("digite a matricula do aluno: ")))
a = 0
for i in range(size(x)):
	if (x[i] % 2 != 0):
		a = a + 1
grupo2 = zeros(a, dtype = int)
y = 0
y1 = 0
for  j in x:
	if(j % 2 != 0):
		grupo2[y] = x[y]
		y = y + 1
	y1 = y1 + 1
print(grupo2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:33:48) 
-- CODE:
#matricula par grupo 1
#matricula impar grupo 2
from numpy import*
x = array(eval(input("digite a matricula do aluno: ")))
a = 0
for i in range x:
	if (i % 2 != 0):
		a = a + 1
grupo2 = zeros(a, dtype = int)
y = 0
y1 = 0
for  j in x:
	if(j % 2 != 0):
		grupo2[y] = x[y]
		y = y + 1
	y1 = y1 + 1
print(grupo2)
-- ERROR:
File "XXXX", line 6
    for i in range x:
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:33:58) 
-- CODE:
#matricula par grupo 1
#matricula impar grupo 2
from numpy import*
x = array(eval(input("digite a matricula do aluno: ")))
a = 0
for i in x:
	if (i % 2 != 0):
		a = a + 1
grupo2 = zeros(a, dtype = int)
y = 0
y1 = 0
for  j in x:
	if(j % 2 != 0):
		grupo2[y] = x[y]
		y = y + 1
	y1 = y1 + 1
print(grupo2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:35:24) 
-- CODE:
#matricula par grupo 1
#matricula impar grupo 2
from numpy import*
x = array(eval(input("digite a matricula do aluno: ")))
a = 0
for i in x:
	if (i % 2 != 0):
		a = a + 1
grupo2 = zeros(a, dtype = int)
y = 0
y1 = 0
for  j in x:
	if(j % 2 != 0):
		grupo2[y] = x[y1]
		y = y + 1
	y1 = y1 + 1
print(grupo2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:35:33) 
-- CODE:
#matricula par grupo 1
#matricula impar grupo 2
from numpy import*
x = array(eval(input("digite a matricula do aluno: ")))
a = 0
for i in x:
	if (i % 2 != 0):
		a = a + 1
grupo2 = zeros(a, dtype = int)
y = 0
y1 = 0
for  j in x:
	if(j % 2 != 0):
		grupo2[y] = x[y1]
		y = y + 1
	y1 = y1 + 1
print(grupo2)
-- EXECUTION TIME:
1.07806
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
